Tweaked in-battle console log's styles to prevent overflow

--- a/styles/style.css
+++ b/styles/style.css
@@ -2162,6 +2162,7 @@ body.windowFlag_landscapeMode #battle .canvas_overlay_footer {
     padding: 0;
     margin: 0;
     width: 100%;
+    max-width: 100%;
     height: 100%;
 }
 #console .event {
